<?xml version="1.0" encoding="utf-8"?>

<!--

    TODO :: TL;DR
            -+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-
            Bikin Tabel Ga Bisa Pake
            `android.support.constraint.ConstraintLayout`
            -+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-
            Jadi Pake `LinearLayout` Ada Attribute `layout_weight`
            -+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-
            Baru Dipake Untuk Tampilan Di Bawahnya
            => Sebagai Child `ScrollView` (Anjuran Submission Sebelumnya)

 -->

<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.DetailActivity">

    <LinearLayout
        android:id="@+id/detail_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/detail_header" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="fill"
            android:padding="8dp">

            <!--

                TODO :: TL;DR
                        -+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-+-
                        Nih `ConstraintLayout`

            -->

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/text_view_overview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:text="@string/overview"
                    android:textColor="#ff808080"
                    android:textSize="16sp"
                    android:textStyle="bold|italic"
                    app:layout_constraintTop_toTopOf="parent" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/colorPrimaryDark"
                    app:layout_constraintTop_toBottomOf="@id/text_view_overview" />

                <com.codesgood.views.JustifiedTextView
                    android:id="@+id/detail_overview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/data_overview"
                    android:textColor="@android:color/black"
                    android:textSize="14sp"
                    app:layout_constraintTop_toBottomOf="@id/text_view_overview" />

                <TextView
                    android:id="@+id/text_view_information"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:text="@string/information"
                    android:textColor="#ff808080"
                    android:textSize="16sp"
                    android:textStyle="bold|italic"
                    app:layout_constraintTop_toBottomOf="@id/detail_overview" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/colorPrimaryDark"
                    app:layout_constraintTop_toBottomOf="@id/text_view_information" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="8dp"
                    android:orientation="vertical"
                    app:layout_constraintTop_toBottomOf="@id/text_view_information">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="4"
                            android:paddingStart="8dp"
                            android:paddingEnd="8dp"
                            android:text="@string/original_name"
                            android:textColor="#ff808080"
                            android:textSize="14sp" />

                        <TextView
                            android:id="@+id/detail_original_name"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="6"
                            android:paddingStart="8dp"
                            android:paddingEnd="8dp"
                            android:text="@string/original_name"
                            android:textColor="@android:color/black"
                            android:textAlignment="textEnd"
                            android:textSize="14sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="4"
                            android:paddingStart="8dp"
                            android:paddingEnd="8dp"
                            android:text="@string/popularity"
                            android:textColor="#ff808080"
                            android:textSize="14sp" />

                        <TextView
                            android:id="@+id/detail_popularity"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="6"
                            android:paddingStart="8dp"
                            android:paddingEnd="8dp"
                            android:text="@string/popularity"
                            android:textColor="@android:color/black"
                            android:textAlignment="textEnd"
                            android:textSize="14sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="4"
                            android:paddingStart="8dp"
                            android:paddingEnd="8dp"
                            android:text="@string/genres"
                            android:textColor="#ff808080"
                            android:textSize="14sp" />

                        <TextView
                            android:id="@+id/detail_genres"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="6"
                            android:paddingStart="8dp"
                            android:paddingEnd="8dp"
                            android:text="@string/genres"
                            android:textColor="@android:color/black"
                            android:textAlignment="textEnd"
                            android:textSize="14sp" />

                    </LinearLayout>

                </LinearLayout>

            </android.support.constraint.ConstraintLayout>

        </ScrollView>

    </LinearLayout>

    <include layout="@layout/template_loading" />

</android.support.design.widget.CoordinatorLayout>